# ha-entity-dependency-engine

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MIGRATION_STATUS.md  README.md  RELEASE_STATUS.md  SECURITY.md  conftest.py  hacs.json  pyproject.toml  requirements-test.txt
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: validate.yml
custom_components/entity_dependency_engine/: __init__.py  config_flow.py  (+7 more)
docs/: GRAPH_DATA_CONTRACT.md  PANEL_EXPANSION_CONTRACT.md  PANEL_LAYOUT_CONTRACT.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_0.2.0-rc.1.md  RELEASE_NOTES_0.2.0.md  SCREENSHOTS.md  UPGRADING.md  V0_1_COMPATIBILITY_CONTRACT.md  graph-data.schema.json
tests/: test_alpha_runtime_wiring.py  test_application.py  test_automations_parser.py  test_builder.py  test_config_entries_parser.py  test_dependency_report.py  test_derivative_parser.py  test_device_registry_parser.py  test_entity_registry_parser.py  test_frontend_shell_contract.py  test_generate_report.py  test_graph.py  test_graph_contract_schema.py  test_group_switch_as_x.py  test_gui_templates_parser.py  test_history_stats_parser.py  test_integration_parser.py  test_min_max_parser.py  test_panel_api.py  test_panel_expansion.py  test_panel_graph.py  test_panel_layout_contract.py  test_release_metadata.py  test_runtime_wiring.py  test_scripts_parser.py  test_source_encoding.py  test_template_references.py  test_threshold_parser.py  test_utility_meter_parser.py  test_v0_1_compatibility.py  test_websocket_contract.py
(+49 files in other folders)
