[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ha-entity-dependency-engine"
version = "0.1.0.dev2"
description = "A Home Assistant custom integration for recursive entity dependency analysis"
requires-python = ">=3.13"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
